--- a/custom_recorder_android/android/src/main/AndroidManifest.xml
+++ b/custom_recorder_android/android/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.example.custom_recorder_android">
+  <uses-permission android:name="android.permission.RECORD_AUDIO" />
 </manifest>
