--- a/custom_recorder_windows/example/pubspec.yaml
+++ b/custom_recorder_windows/example/pubspec.yaml
@@ -16,6 +16,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.11
 
   custom_recorder_windows:
     # When depending on this package from a real application you should use:
