--- a/custom_recorder_windows/pubspec.yaml
+++ b/custom_recorder_windows/pubspec.yaml
@@ -1,6 +1,6 @@
 name: custom_recorder_windows
 description: "A new Flutter plugin project."
-version: 0.0.1
+version: 0.0.1+2
 homepage:
 
 environment:
